adding finished lab

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="description" content="I want to say hello to the world">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="The history of SpaceX ranging from 2002 - 2016, including launches, rockets.">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Sara Rodgers">
+    <meta property='og:title' content="SpaceX - History of Launches & Missions" />
+
     <title>SpaceX - History of Launches & Missions</title>
 
     <style>
       .audio{
+        margin-left: 40px;
+      }
+
+      .images{
+        margin-left: 40px;
+      }
+
+      .videos{
         margin-left: 40px;
       }
     </style>
@@ -24,7 +37,7 @@
     <li><a href="#l4">Setback</a></li>
   </ul>
 
-  <img src="http://subhoswapno.com/publicity/images/web-development-banner.jpg" />
+  <img width="400" height="125"  src="http://subhoswapno.com/publicity/images/web-development-banner.jpg" />
 
 <h3>For Your Listening Pleasure</h3>
 <div class="audio">
@@ -339,8 +352,8 @@ regulations, SpaceX Mission controllers were unable to release more information 
 <thead>
 <tr>
   <th>Launch Date</th>
-  <th>Location</th>
   <th>Rocket</th>
+  <th>Location</th>
 </tr>
 </thead>
 <tfoot>
@@ -379,8 +392,140 @@ regulations, SpaceX Mission controllers were unable to release more information 
 </tbody>
 </table>
 
-<!--TODO: add in comments section -->
+<!-- should the comments section be a form? -->
 
+<h3>Comments</h3>
 
+<p>
+  <strong>Joe Smith</strong>
+</p>
+
+<p>
+  June 4, 2016
+</p>
+
+<p style= "font-size: 20px";>
+  Elon is Awesome!
+</p>
+
+<p>
+  <strong>Johm Smith</strong>
+</p>
+
+<p>
+  June 5, 2016
+</p>
+
+<p style= "font-size: 20px";>
+  No I hate him!
+</p>
+
+<p>
+  <strong>Lisa Lisa</strong>
+</p>
+
+<p>
+  June 6, 2016
+</p>
+
+<p style= "font-size: 20px">
+  I'm right and you all are wrong
+</p>
+
+<h3>Images</h3>
+<div class= "images">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1d/Launch_of_Falcon_9_carrying_ORBCOMM_OG2-M1_%2816601442698%29.jpg/220px-Launch_of_Falcon_9_carrying_ORBCOMM_OG2-M1_%2816601442698%29.jpg" />
+<p>
+  Launch of Falcon 9 carrying ORBCOMM OG2-M1
+</p>
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Falcon_9_carrying_CRS-7_Dragon_on_SLC-40_pad_%2819045370790%29.jpg/220px-Falcon_9_carrying_CRS-7_Dragon_on_SLC-40_pad_%2819045370790%29.jpg" />
+<p>
+  Falcon 9 carrying CRS-7 Dragon on SLC-40 pad
+</p>
+</div>
+
+<h3>Videos</h3>
+
+<div class="videos">
+<video width="640" height="360" controls src="https://s3-us-west-1.amazonaws.com/codetahoe-public/lessons/spacex-history.mp4" >
+</video>
+<p>
+  Mission Highlights
+</p>
+</div>
+
+<figure>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/eGimzB5QM1M" frameborder="0" allowfullscreen></iframe>
+      <figcaption>
+          SpaceX CRS-7 Falcon 9 Ready for Launch
+      </figcaption>
+</figure>
+
+<figure>
+    <iframe src="https://player.vimeo.com/video/125746164?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <figcaption>
+            Space Jam
+        </figcaption>
+  </figure>
+
+  <h3>More Info</h3>
+
+  <ul>
+    <li><a href="https://en.wikipedia.org/wiki/Elon_Musk">Elon Bio</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Rocket">Rockets</a></li>
+  </ul>
+
+  <h3>Contact SpaceX</h3>
+
+  <h4><strong>Visit Us (We Love Visitors!)</strong></h4>
+
+  <address>
+    <em>1 Rocket Road</em><br>
+    <em>Hawthorne, CA 90250</em>
+  </address>
+
+  <h4><strong>Apply to Work at SpaceX</strong></h4>
+
+  <form action="index.html" method="post">
+    <p>
+      Full Name
+      <input type="text" name="name">
+    </p>
+    <p>
+      Bio
+      <textarea name="name" rows="6" cols="40"></textarea>
+    </p>
+    <p>
+      Favorite Rocket
+      <select>
+          <option>Falcon 1</option>
+          <option>Falcon 9 v1.0</option>
+          <option>Falcon 9 v1.1</option>
+          <option>Falcon 9 v1.2</option>
+          <option>Falcon Heavy</option>
+      </select>
+    </p>
+    <p>
+      Your Age Group <br>
+      <input type=radio name="portion_num">Under 21 <br>
+      <input type=radio name="portion_num">21-35 <br>
+      <input type=radio name="portion_num">Over 35 <br>
+
+    </p>
+    <p>
+      What Are You Good At? <br>
+      <input type=checkbox> I am a Pilot <br>
+      <input type=checkbox> I am a Diver<br>
+      <input type=checkbox> I Know How to Juggle Cats <br>
+    </p>
+    <input type=submit>
+  </form>
+
+  <img width="400" height="125" src="http://subhoswapno.com/publicity/images/web-development-banner.jpg" />
+
+<p>
+  Copyright (c) 2016 Iron Man Enterprises, All Rights Reserved.
+</p>
   </body>
 </html>
